2.91: G+MMB select direction drops before releasing MMB #83020

Closed
opened 2020-11-25 21:07:54 +01:00 by Eugene Du · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: 0f45cab862
Worked: 2.90.1

Short description of error
When move (G) and then click and hold Middle Mouse it sometimes drop selecting axis before Middle Mouse is released.

Exact steps for others to reproduce the error
2.91_bug_MMB.mp4

Another example in action, more illustrative example
2.91_bug_MMB_test2.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: `0f45cab862` Worked: 2.90.1 **Short description of error** When move (G) and then click and hold Middle Mouse it sometimes drop selecting axis before Middle Mouse is released. **Exact steps for others to reproduce the error** [2.91_bug_MMB.mp4](https://archive.blender.org/developer/F9374705/2.91_bug_MMB.mp4) Another example in action, more illustrative example [2.91_bug_MMB_test2.mp4](https://archive.blender.org/developer/F9374887/2.91_bug_MMB_test2.mp4)
Author

Added subscriber: @APEC

Added subscriber: @APEC
Eugene Du changed title from 2.91: G+MMB direction drops before releasing MMB to 2.91: G+MMB select direction drops before releasing MMB 2020-11-25 23:06:31 +01:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I cannot reproduce the problem.
Can you try run Blender from console with --debug-events?
https://docs.blender.org/manual/en/latest/advanced/command_line/launch/windows.html

Optionally you can put this file in the same directory as blender.exe and run it (blender_debug_events.cmd).
blender_debug_events.cmd

After that, try to replicate the problem with a few steps and then close the blender.
After Blender closes, the logs will be in a text file which can be attached here.
Most likely it will contain more information about the error.

I cannot reproduce the problem. Can you try run Blender from console with `--debug-events`? https://docs.blender.org/manual/en/latest/advanced/command_line/launch/windows.html Optionally you can put this file in the same directory as `blender.exe` and run it (`blender_debug_events.cmd`). [blender_debug_events.cmd](https://archive.blender.org/developer/F9380941/blender_debug_events.cmd) After that, try to replicate the problem with a few steps and then close the blender. After Blender closes, the logs will be in a text file which can be attached here. Most likely it will contain more information about the error.
Author

Here is what I got, have the same behavior
blender_debug_events.txt

blender_system_info.txt

It seems like the first MMB click after G it recognize as click-release instead of click-hold in some cases.

Or probably reason, after G I hit MMB too quickly, and with some reason in 2.91 it recognize my click as click-release, because if I click G and after 1-2 sec click MMB and hold it's all ok with choising direction.
Yes, tried this several times, and all ok if hit MMB after G not so quickly...but why it works in 2.90...

Here is what I got, have the same behavior [blender_debug_events.txt](https://archive.blender.org/developer/F9381101/blender_debug_events.txt) [blender_system_info.txt](https://archive.blender.org/developer/F9381105/blender_system_info.txt) It seems like the first MMB click after G it recognize as click-release instead of click-hold in some cases. Or probably reason, after G I hit MMB too quickly, and with some reason in 2.91 it recognize my click as click-release, because if I click G and after 1-2 sec click MMB and hold it's all ok with choising direction. Yes, tried this several times, and all ok if hit MMB after G not so quickly...but why it works in 2.90...

I noticed that there are many W events.
Sometimes it seems to indicate that it is the problem.
Do you press the {key W} key very often?

I noticed that there are many W events. Sometimes it seems to indicate that it is the problem. Do you press the {key W} key very often?
Author

oh, my bad it's my custom keys,
now with blender keys
blender_debug_events.txt
blender_system_info.txt

oh, my bad it's my custom keys, now with blender keys [blender_debug_events.txt](https://archive.blender.org/developer/F9381249/blender_debug_events.txt) [blender_system_info.txt](https://archive.blender.org/developer/F9381250/blender_system_info.txt)

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Okay, now I got what's going on!
I will submit a correction soon :)

Okay, now I got what's going on! I will submit a correction soon :)
Author

You are the best!
Thank you!

You are the best! Thank you!

This issue was referenced by b6e84d3edf

This issue was referenced by b6e84d3edffde553d6dd58bbc48ba77bef01625e

This issue was referenced by 44f5d99cbf

This issue was referenced by 44f5d99cbf872d8b9eead749ca880cbeb9fc0266

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-11-26 15:43:49 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83020
No description provided.